Add new class Failfs_Fuse_Thread
This commit moves the fuse thread logic into a separate
class and implements the remount command which allows to
emulate the case where a parallel filesystem (such as GPFS)
is remounted. Writing to open file descriptors will return
with errno ENOTCONN (instead of ESTALE as in the GPFS case).

--- a/tests/failfs/Makefile
+++ b/tests/failfs/Makefile
@@ -15,7 +15,7 @@ default: all
 
 all: failfs.exe failfs_cmd_util.exe
 
-failfs.exe: main.o failfs.o error.o failfs_fuse.o
+failfs.exe: main.o failfs.o error.o failfs_fuse_thread.o failfs_fuse.o
 	$(Q)$(LD) $(LDFLAGS) -o $@ $^ $(LIBS)
 	@echo "LD  $@"
 
